# sisl-gui

./: .firebaserc  .gitignore  .travis.yml  CNAME  README.md  asset-manifest.json  index.html  package-lock.json  package.json  precache-manifest.240ac97090893ef519d546c0854b572f.js  precache-manifest.44dae8e77a35106af0e504dee330b3a5.js  precache-manifest.bb2935e547c10d5be075dac6bdf8db28.js  precache-manifest.cd836096181c3ac5e8719b35932d4dfd.js  precache-manifest.fdabfa43f86e8102963c8d0155dc20e3.js  pyodide-webworker.js  report.20200512.195649.27342.0.001.json  report.20200512.195755.27460.0.001.json  report.20200512.195901.27509.0.001.json  report.20200512.200010.27673.0.001.json  report.20200513.190259.13359.0.001.json  report.20200513.190418.13436.0.001.json  service-worker.js  setup.cfg  setup.py  sisl-0.14.2-cp311-cp311-emscripten_3_1_45_wasm32.whl  wheel_to_frontend.sh
.github/workflows/: deploy-gui.yaml  publish-pypi.yaml  test.yaml
frontend/: package-lock.json  package.json
frontend/public/: index.html  nodes-0.0.0-py3-none-any.whl  pyodide-webworker.js  sisl-0.14.4.dev295+g00b8afa29d-cp312-cp312-emscripten_3_1_52_wasm32.whl
frontend/src/: App.css  App.js  App.tsx  index.css  index.js  utils.js
public/: index.html
sisl-docs/doctrees/: contribute.doctree
sisl-docs/html/: objects.inv  other.html
sisl_gui/: __init__.py  _patch.py  launch.py  registry.py  sgui.py
sisl_gui/server/: api.py  app.py  json.py  pyodide.py  run.py  session.py  sync.py
src/: App.css  App.js
src/apis/: PythonApi.js  Socket.js
src/pages/: PlotEditor.js  PlotMethods.js  PlotTweaking.js  Plots.js  PlotsPage.js  Settings.js  SislDocs.js
src/routes/: index.js
src/utils/: events.js  hotkeys.js
static/css/: 2.32461d0f.chunk.css  2.32461d0f.chunk.css.map  2.af509a90.chunk.css  2.af509a90.chunk.css.map  main.74d4e70b.chunk.css  main.8eb17541.chunk.css  main.8eb17541.chunk.css.map  main.dee163b6.css  main.f236c7fb.css  main.f236c7fb.css.map  main.fdd8ba83.chunk.css.map
(+339 files in other folders)
