[metadata]
name = sisl-gui
version = 0.1.2
description = Graphical interface for the sisl visualization module
url = http://github.com/pfebrer/sisl-gui
author = Pol Febrer
author_email = pfebrer96@gmail.com
license = MIT

[options]
zip_safe = False
packages = find:
install_requires =
    simplejson  # Because built-in json parses nan and JS does not understand it
    flask
    flask-restx
    flask-socketio >= 5.0
    flask-cors
    flask-login
    flask-session
    gevent-websocket
    eventlet
    dill >= 0.3.2

[options.entry_points]
console_scripts =
    sisl-gui = sisl_gui.sgui:sgui